<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".allactivities.QrScannerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/back_iv"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/punch_attendance_by_qr_code"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <SurfaceView
                android:id="@+id/surfaceView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                />

            <Button
                android:id="@+id/scan_btn"
                android:visibility="gone"
                android:background="#00FFFFFF"
                android:text="@string/tap_to_scan_again"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/error_tv"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/step_1"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/u25cf_scan_qr_code_by_qr_camera_view"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="4dp"
            android:text="@string/step_2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/u25cf_make_attendance"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="4dp"
            android:text="@string/step_3"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/u25cf_capture_selfie_and_click_on_submit_button"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/skip_btn"
            android:text="@string/skip"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</RelativeLayout>