<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".allactivities.FeedbackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/app_name"

            android:src="@drawable/ic_arrow_back" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/app_tv"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/solid_light_orang_4"
                android:gravity="center"
                android:text="@string/app_problem"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/location_tv"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/gray_border_5"
                android:gravity="center"
                android:text="@string/location_problem"
                android:textColor="#ddd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/suggestion_tv"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/gray_border_5"
                android:gravity="center"
                android:text="@string/suggestion"
                android:textColor="#ddd" />

            <TextView
                android:id="@+id/other_tv"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/gray_border_5"
                android:gravity="center"
                android:text="@string/other"
                android:textColor="#ddd" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_a_message"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/require" />
    </LinearLayout>

    <EditText
        android:id="@+id/message_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gray_border_5"
        android:gravity="start"
        android:hint="@string/enter_your_message"
        android:minHeight="100dp"
        android:padding="8dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screenshot"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/optional" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/gray_border_5">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/image_iv"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/add_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_add" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
        android:gravity="bottom"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:visibility="gone"
            android:id="@+id/call_tv"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:background="@drawable/gray_border_5"
            android:text="@string/customer_support" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:text="@string/submit" />
    </LinearLayout>


</LinearLayout>