<?xml version="1.0" encoding="UTF-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:fillViewport="true"    android:layout_height="match_parent"    tools:context=".activity.LoginActivity"    >    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        android:gravity="center"        android:padding="5dp">        <ImageView            android:layout_width="100dp"            android:layout_height="wrap_content"            android:layout_marginTop="100dp"            android:adjustViewBounds="true"            android:contentDescription="@string/app_name"            app:srcCompat="@drawable/logo"            />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:fontFamily="@font/montserrat"            android:layout_marginTop="24dp"            android:text="@string/app_name"            android:textStyle="bold"            android:textColor="@color/colorPrimary"            android:textSize="28sp" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:fontFamily="@font/montserrat"            android:layout_marginTop="8dp"            android:text="@string/welcome_back"            android:visibility="gone"            android:layout_marginStart="16dp"            android:textColor="@color/colorPrimary"            android:textSize="18sp"            />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:fontFamily="@font/montserrat"            android:layout_marginTop="30dp"            android:gravity="center"            android:textColor="@color/black"            android:text="@string/title"            />        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_email"            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="16dp"            android:layout_marginTop="10dp"            android:layout_marginEnd="16dp"            android:hint="@string/user_id"            app:boxStrokeWidth="0.5dp"            >            <com.google.android.material.textfield.TextInputEditText                android:id="@+id/et_email"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:fontFamily="@font/montserrat"                android:inputType="textEmailAddress"                android:textSize="14sp" />        </com.google.android.material.textfield.TextInputLayout>        <com.google.android.material.textfield.TextInputLayout            android:id="@+id/til_pass"            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="16dp"            android:layout_marginEnd="16dp"            android:layout_marginTop="8dp"            android:hint="@string/password"            app:boxStrokeColor="@color/colorPrimary"            app:boxStrokeWidth="0.5dp"            app:passwordToggleEnabled="true">            <androidx.appcompat.widget.AppCompatEditText                android:id="@+id/et_password"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:fontFamily="@font/montserrat"                android:inputType="textPassword"                android:textSize="14sp" />        </com.google.android.material.textfield.TextInputLayout>        <TextView            android:id="@+id/btn_forgot_password"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_gravity="end"            android:layout_margin="16dp"            android:padding="5dp"            android:text="@string/forgot_password"            android:textColor="@color/red_color"            android:textSize="12sp"            app:fontFamily="@font/montserrat" />        <Button            android:layout_width="match_parent"            android:layout_margin="16dp"            android:height="60dp"            android:text="@string/login"            android:textAllCaps="false"            android:id="@+id/btn_login"            android:layout_height="wrap_content"/>      <LinearLayout          android:gravity="bottom"          android:layout_width="match_parent"          android:layout_height="match_parent"          android:orientation="vertical"          >          <LinearLayout              android:id="@+id/location_ll"              android:layout_width="wrap_content"              android:layout_height="wrap_content"              android:background="@drawable/blue_border_5"              android:gravity="center"              android:layout_gravity="center"              android:paddingStart="16dp"              android:paddingEnd="16dp">              <ImageView                  android:layout_width="wrap_content"                  android:layout_height="wrap_content"                  android:layout_alignParentBottom="true"                  android:layout_margin="8dp"                  android:src="@drawable/ic_baseline_my_location_24" />              <TextView                  android:layout_width="wrap_content"                  android:layout_height="wrap_content"                  android:textColor="@color/colorPrimary"                  android:text="Get Current Location" />          </LinearLayout>          <LinearLayout              android:layout_width="wrap_content"              android:layout_margin="16dp"              android:layout_height="wrap_content">              <ImageView                  android:src="@drawable/ic_baseline_call_24"                  android:layout_width="wrap_content"                  android:layout_height="wrap_content"                  android:contentDescription="@string/app_name" />              <TextView                  android:text="@string/technical_support"                  android:layout_width="wrap_content"                  android:layout_height="wrap_content"/>              <TextView                  android:text="@string/mobile_number"                  android:textColor="@color/black"                  android:layout_width="wrap_content"                  android:layout_height="wrap_content"/>          </LinearLayout>      </LinearLayout>    </LinearLayout></ScrollView>